# ced

./: .clang-format  .clang-tidy  .clang_complete  .gitignore  CMakeLists.txt  todo.txt
src/: BufferView.cc  BufferView.h  Line.cc  Line.h  buffer.c  buffer.cc  buffer.h  buffer_internal.h  buffer_view.c  buffer_view.cc  buffer_view.h  bufferview.cc  bufferview.h  ced.c  ced.cc  ced.h  commandline.c  commandline.cc  commandline.h  commands.c  commands.cc  commands.h  common.c  common.h  context.h  cursor.h  defaults.h  defs.h  draw.c  draw.cc  draw.h  fileutils.c  fileutils.cc  fileutils.h  input.c  input.cc  input.h  input_keys.h  line.c  line.cc  (+14 more)
text/: kepler.txt  scratch.txt  table.txt
